--- a/dev_notes/Yoshimi Controls/Sections/filterinsert.html
+++ b/dev_notes/Yoshimi Controls/Sections/filterinsert.html
@@ -24,82 +24,147 @@
     </thead>
     <tbody>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>centerFrequency</td>
+        <td>0~127</td>
+        <td>0</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>255</td>
-        <td></td>
+        <td>Center frequency</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Q</td>
+        <td>0~127</td>
+        <td>1</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>255</td>
-        <td></td>
+        <td>Q factor</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>frequencyTracking</td>
+        <td>0~127</td>
+        <td>2</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>255</td>
-        <td></td>
+        <td>Degree of frequency tracking</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>velocitySensitivity</td>
+        <td>0~127</td>
+        <td>3</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>255</td>
-        <td></td>
+        <td>Velocity sense amount</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>velocityCurve</td>
+        <td>0~127</td>
+        <td>4</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>255</td>
-        <td></td>
+        <td>Velocity sense curve</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>gain</td>
+        <td>0~127</td>
+        <td>5</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
         <td>255</td>
         <td>255</td>
+        <td>Gain / damping</td>
+      </tr>
+      <tr>
+        <td>stages</td>
+        <td>0~4</td>
+        <td>6</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
         <td>255</td>
-        <td></td>
+        <td>255</td>
+        <td>255</td>
+        <td>Stages -- 1x, 2x, 3x, 4x, 5x</td>
+      </tr>
+      <tr>
+        <td>baseType</td>
+        <td>0~2</td>
+        <td>7</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Category -- Analog, Formant, State Variable</td>
+      </tr>
+      <tr>
+        <td>analogType</td>
+        <td>0~8</td>
+        <td>8</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>LowPass, HighPass, LowPass2, HighPass2, BandPass2, Not2, Peak2, LowShelf2, HighShelf2</td>
+      </tr>
+      <tr>
+        <td>stateVariableType</td>
+        <td>0~3</td>
+        <td>9</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>LowPass, HighPass, BandPass, Not</td>
+      </tr>
+      <tr>
+        <td>frequencyTrackingRange</td>
+        <td>0,1</td>
+        <td>10</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>All</td>
+        <td>1</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Tracking shift -- 0 = -100% ~ 100%, 1 = 0 ~ 200%</td>
       </tr>
     </tbody>
   </table>
