--- a/dev_notes/Yoshimi Controls/Sections/main.html
+++ b/dev_notes/Yoshimi Controls/Sections/main.html
@@ -85,7 +85,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Panning law ~ cut,normal,boot (not effects)</td>
+        <td>Panning law -- cut,normal,boot (not effects)</td>
       </tr>
       <tr>
         <td>detune</td>
@@ -164,6 +164,19 @@
         <td>255</td>
         <td>255</td>
         <td>Channel switcher incomming CC</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>exportBank</td>
@@ -372,6 +385,19 @@
         <td>255</td>
         <td>255</td>
         <td>Load file from group in history list (to base channel for vectors)</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>defaultPart</td>
