--- a/dev_notes/Yoshimi Controls/Sections/midi.html
+++ b/dev_notes/Yoshimi Controls/Sections/midi.html
@@ -62,7 +62,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Note On, Char 1 = number, Char 2 = velocity</td>
+        <td>Note On -- Char 1 = number, Char 2 = velocity</td>
       </tr>
       <tr>
         <td>noteOff</td>
@@ -75,7 +75,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Note Off, Char 1 = number</td>
+        <td>Note Off -- Char 1 = number</td>
       </tr>
       <tr>
         <td>controller</td>
@@ -88,7 +88,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Controller, Char 1 = type (controller number)</td>
+        <td>Controller -- Char 1 = type (controller number)</td>
       </tr>
       <tr>
         <td>instrument</td>
@@ -101,7 +101,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Program Change, 128 to 159 = extended form</td>
+        <td>Program Change -- 128 to 159 = extended form</td>
       </tr>
       <tr>
         <td>bankChange</td>
