--- a/dev_notes/Yoshimi Controls/Sections/midilearn.html
+++ b/dev_notes/Yoshimi Controls/Sections/midilearn.html
@@ -35,7 +35,7 @@
         <td>255</td>
         <td>0,1</td>
         <td>msg No.</td>
-        <td>Set 'block', stop any other respose to this CC</td>
+        <td>Set 'block' -- stop any other response to this CC</td>
       </tr>
       <tr>
         <td>limit</td>
@@ -48,7 +48,7 @@
         <td>255</td>
         <td>0,2</td>
         <td>msg No.</td>
-        <td>Set 'limit' othewise 'compress'incoming value</td>
+        <td>Set 'limit' othewise 'compress' incoming value</td>
       </tr>
       <tr>
         <td>mute</td>
@@ -61,7 +61,7 @@
         <td>255</td>
         <td>0,4</td>
         <td>msg No.</td>
-        <td>Set 'mute', isable this line</td>
+        <td>Set 'mute' -- disable this line</td>
       </tr>
       <tr>
         <td>nrpn</td>
@@ -100,7 +100,7 @@
         <td>255</td>
         <td>0</td>
         <td>msg No.</td>
-        <td>Set minimim translated CCvalue</td>
+        <td>Set minimim translated CC value</td>
       </tr>
       <tr>
         <td>maximum</td>
@@ -113,7 +113,7 @@
         <td>0~200</td>
         <td>0</td>
         <td>msg No.</td>
-        <td>Set maximim translated CCvalue</td>
+        <td>Set maximim translated CC value</td>
       </tr>
       <tr>
         <td>ignoreMove</td>
