--- a/dev_notes/Yoshimi Controls/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Controls/Sections/toplevel.html
@@ -24,7 +24,7 @@
     <tbody>
       <tr>
         <td>windowTitle</td>
-        <td>0~254</td>
+        <td>ret. msg No.</td>
         <td>0~63</td>
         <td>252</td>
         <td>0~15</td>
@@ -33,7 +33,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Builds window title incorporating text if passed in</td>
+        <td>Builds window title. With text if passed in 'value'</td>
       </tr>
       <tr>
         <td>copyPaste</td>
@@ -45,7 +45,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>msg No</td>
+        <td>msg No.</td>
         <td>Perform section List, Copy/ Paste</td>
       </tr>
       <tr>
@@ -59,7 +59,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Blocks further action. Internally set, so read only</td>
+        <td>Blocks further action. Internally set (read only)</td>
       </tr>
       <tr>
         <td>unrecognised</td>
@@ -81,11 +81,11 @@
         <td>~ ~</td>
         <td>~ ~</td>
         <td>~ ~</td>
-        <td>~ ~</td>
-        <td>~ ~</td>
-        <td>~ ~</td>
+        <td>255</td>
+        <td>255</td>
+        <td>128</td>
         <td>msg No.</td>
-        <td>Just sends a message</td>
+        <td>Just sends a message to the GUI</td>
       </tr>
       <tr>
         <td>forceExit</td>
