--- a/dev_notes/Yoshimi Controls/Sections/vector.html
+++ b/dev_notes/Yoshimi Controls/Sections/vector.html
@@ -86,7 +86,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>X feature 0 - off/on</td>
+        <td>X feature 0 -- off/on</td>
       </tr>
       <tr>
         <td>Xfeature1</td>
@@ -99,7 +99,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>X feature 1 - off/on/reverse</td>
+        <td>X feature 1 -- off/on/reverse</td>
       </tr>
       <tr>
         <td>Xfeature2</td>
@@ -112,7 +112,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>X feature 2 - off/on/reverse</td>
+        <td>X feature 2 -- off/on/reverse</td>
       </tr>
       <tr>
         <td>Xfeature3</td>
@@ -125,7 +125,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>X feature 3 - off/on/reverse</td>
+        <td>X feature 3 -- off/on/reverse</td>
       </tr>
       <tr>
         <td>Ycontroller</td>
@@ -177,7 +177,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>Y feature 0 - off/on</td>
+        <td>Y feature 0 -- off/on</td>
       </tr>
       <tr>
         <td>Yfeature1</td>
@@ -190,7 +190,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>Y feature 1 - off/on/reverse</td>
+        <td>Y feature 1 -- off/on/reverse</td>
       </tr>
       <tr>
         <td>Yfeature2</td>
@@ -203,7 +203,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>Y feature 2 - off/on/reverse</td>
+        <td>Y feature 2 -- off/on/reverse</td>
       </tr>
       <tr>
         <td>Yfeature3</td>
@@ -216,7 +216,7 @@
         <td>0~15</td>
         <td>255</td>
         <td>255</td>
-        <td>Y feature 3 - off/on/reverse</td>
+        <td>Y feature 3 -- off/on/reverse</td>
       </tr>
       <tr>
         <td>erase</td>
@@ -226,10 +226,10 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>0~15,>15</td>
+        <td>0~15<br>> 15</td>
         <td>255</td>
         <td>255</td>
-        <td>Clear vector (base ch) >15 clear all</td>
+        <td>Clear vector (base ch), > 15 clear all</td>
       </tr>
     </tbody>
   </table>
